--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.84.1",
     "@types/styled-components": "^5.1.34",
+    "framer-motion": "^12.23.12",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.16.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
