--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-nextjs-app",
+  "name": "pedro-hardeman",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.16.0",
+    "react-material-ui-carousel": "^3.4.2",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
